--- a/src/App.css
+++ b/src/App.css
@@ -287,12 +287,6 @@ main > section > h2 {
   }
 }
 
-/* #project-2 {
-}
-
-#project-3 {
-} */
-
 .projects-wrapper {
   display: flex;
   flex-direction: column;
@@ -308,28 +302,30 @@ main > section > h2 {
   flex-direction: column;
   padding: 5rem;
   gap: 5rem;
+  margin: 0 auto;
 }
 
 .project-card {
   font-size: clamp(1rem, 0.75vw, 1.3rem);
   display: flex;
-  justify-content: center;
-  height: 50rem;
   hr {
     margin-block: 0.5rem;
   }
   img {
     object-fit: cover;
+    height: 35rem;
+    width: 35rem;
   }
 }
 
 .project-text-wrapper {
   display: flex;
   flex-direction: column;
-  gap: 0.4rem;
   background: var(--clr-bg-accent);
   backdrop-filter: blur(15px);
   padding: 3rem;
+  max-width: 35rem;
+
   h3 {
     color: var(--clr-font-accent);
     font-size: xx-large;
@@ -341,7 +337,6 @@ main > section > h2 {
 }
 .project-description {
   display: flex;
-  max-width: 50rem;
   line-height: 1.5rem;
 }
 
@@ -376,11 +371,8 @@ main > section > h2 {
   border-radius: 0.5rem;
   text-align: center;
   min-width: 15rem;
-
-  p,
-  a {
-    text-decoration: none;
-  }
+  text-decoration: none;
+  color: var(--clr-font-accent);
 }
 
 #link-to-more-projects-icon {
@@ -399,15 +391,13 @@ main > section > h2 {
   background-color: var(--clr-font-accent);
   color: var(--clr-primary-bg);
   transition: all 0.5s ease-in-out forwards;
-  transition-delay: 0.25s;
   p {
     opacity: 0%;
   }
   #link-to-more-projects-icon {
     opacity: 100%;
-    transition-delay: 0.25s;
     width: 100%;
-    transition: all 0.5s ease-in-out forwards;
+    transition: all 0.25s ease-in-out forwards;
   }
 }
 
@@ -419,6 +409,7 @@ main > section > h2 {
 
   h2 {
     margin: 0 auto;
+    padding-bottom: 5rem;
   }
 }
 
@@ -426,8 +417,7 @@ main > section > h2 {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  padding-block: 5rem;
+
   gap: 5rem;
 }
 
@@ -435,13 +425,16 @@ main > section > h2 {
   display: flex;
   gap: 2rem;
   align-items: center;
+  flex-wrap: wrap;
 }
 
 .headshot-img {
+  display: flex;
+  margin: 0 auto;
   object-fit: cover;
   border-radius: 0.5rem;
-  height: 25rem;
-  width: 25rem;
+  max-width: 25rem;
+  min-width: 15rem;
 }
 
 .text-and-edu {
@@ -449,12 +442,14 @@ main > section > h2 {
   flex-direction: column;
   gap: 1rem;
   max-width: 40rem;
+  margin: 0 auto;
 }
 
 .about-span {
   line-height: 1.5rem;
   font-size: clamp(1rem, 1vw, 1.2rem);
   font-weight: 400;
+  min-width: 25rem;
 }
 
 .education-wrapper {
@@ -467,6 +462,7 @@ main > section > h2 {
   display: flex;
   gap: 3rem;
 }
+
 .education-wrapper h3 {
   font-size: clamp(1.5rem, 1vw, 1.7rem);
 }
@@ -479,52 +475,46 @@ main > section > h2 {
 .education-time-frame {
   opacity: 75%;
 }
+
 .skills-wrapper {
-  display: grid;
-  gap: 1rem;
-  width: 50%;
+  display: flex;
+
+  gap: 5rem;
 }
 
 .skills-card {
-  display: grid;
   list-style: none;
-  border-radius: 0.5rem;
-  padding: 0.5rem 1rem;
-  gap: 1rem;
-  align-items: center;
-  backdrop-filter: blur(50px);
 }
 
 .skills-card h3 {
   text-align: center;
   color: var(--clr-font-primary);
-  font-size: clamp(1.5rem, 1vw, 1.7rem);
+  font-size: clamp(1.5rem, 0.5vw, 2rem);
+  padding-bottom: 2rem;
 }
 
 .skills-card li :not(.skill-item-text) {
   color: var(--clr-font-accent);
-  height: 36px;
-  width: 36px;
+  height: 2rem;
+  width: 2rem;
 }
 
 .skills-items ul {
-  display: flex;
-  gap: 1rem;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 0.5rem;
 }
 
 .skills-items li {
   border: 2px solid var(--clr-bg-accent-2);
-  width: 100%;
   background-color: var(--clr-secondary-bg);
   font-weight: 600;
-  display: grid;
-  gap: 0.5rem;
-  place-items: center;
-  place-content: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
   border-radius: 0.5rem;
-  font-size: clamp(1rem, 1vw, 1.1rem);
-  padding: 0.5rem 1rem;
-  min-width: 10rem;
+  font-size: clamp(1rem, 1vw, 2.2rem);
   box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5);
 }
 
@@ -535,8 +525,7 @@ main > section > h2 {
   flex-direction: column;
   padding-block: 5rem;
   background-color: var(--clr-secondary-bg);
-  gap: 5rem;
-
+  gap: 2rem;
   h2 {
     margin: 0 auto;
   }
@@ -565,7 +554,7 @@ main > section > h2 {
   display: flex;
   box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5);
   border: 2px solid var(--clr-bg-accent-2);
-
+  background: var(--clr-secondary-bg);
   flex-direction: column;
   align-items: center;
   justify-content: center;
